; ModuleID = '/home/carl/AnghaBench/openssl/crypto/x509/extr_v3_utl.c_a2i_IPADDRESS.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/x509/extr_v3_utl.c_a2i_IPADDRESS.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @a2i_IPADDRESS(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca [16 x i8], align 16
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %7 = getelementptr inbounds [16 x i8], [16 x i8]* %4, i64 0, i64 0
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @a2i_ipadd(i8* %7, i8* %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %29

13:                                               ; preds = %1
  %14 = call i32* (...) @ASN1_OCTET_STRING_new()
  store i32* %14, i32** %5, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %13
  store i32* null, i32** %2, align 8
  br label %29

18:                                               ; preds = %13
  %19 = load i32*, i32** %5, align 8
  %20 = getelementptr inbounds [16 x i8], [16 x i8]* %4, i64 0, i64 0
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @ASN1_OCTET_STRING_set(i32* %19, i8* %20, i32 %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %27, label %24

24:                                               ; preds = %18
  %25 = load i32*, i32** %5, align 8
  %26 = call i32 @ASN1_OCTET_STRING_free(i32* %25)
  store i32* null, i32** %2, align 8
  br label %29

27:                                               ; preds = %18
  %28 = load i32*, i32** %5, align 8
  store i32* %28, i32** %2, align 8
  br label %29

29:                                               ; preds = %27, %24, %17, %12
  %30 = load i32*, i32** %2, align 8
  ret i32* %30
}

declare dso_local i32 @a2i_ipadd(i8*, i8*) #1

declare dso_local i32* @ASN1_OCTET_STRING_new(...) #1

declare dso_local i32 @ASN1_OCTET_STRING_set(i32*, i8*, i32) #1

declare dso_local i32 @ASN1_OCTET_STRING_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
